# opendal-reqsign

./: .asf.yaml  .env.example  .gitignore  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  THREAT_MODEL.md  draft-THREAT-MODEL.md  licenserc.toml  rust-toolchain.toml  rustfmt.toml  vercel.json
.agents/skills/reqsign-release/: SKILL.md
.github/: 1password-setup.md  FUNDING.yml  dependabot.yml
.github/workflows/: aliyun_oss.yml  asf-allowlist-check.yml  aws_v4.yml  azure_storage.yml  ci.yml  google.yml  huaweicloud_obs.yml  openstack_keystone.yml  oracle.yml  release.yml  tencent_cos.yml
context/command-execute-tokio/: Cargo.toml
context/command-execute-tokio/src/: lib.rs
context/file-read-tokio/: Cargo.toml  README.md
context/file-read-tokio/examples/: read_credentials.rs
context/file-read-tokio/src/: lib.rs
context/http-send-reqwest/: Cargo.toml  README.md
context/http-send-reqwest/examples/: custom_client.rs
context/http-send-reqwest/src/: lib.rs
context/http-send-reqwest/tests/: wasm.rs
context/jwt/: Cargo.toml
context/jwt/src/: lib.rs
core/: Cargo.toml  README.md
core/src/: api.rs  context.rs  error.rs  futures_util.rs  hash.rs  jwt.rs  lib.rs  request.rs  signer.rs  time.rs  utils.rs
docs/: default-credential-provider-api.md
release/: SKILL.md
reqsign/: Cargo.toml  README.md
reqsign/examples/: aws.rs  azure.rs  google.rs
reqsign/src/: aliyun.rs  aws.rs  azure.rs  context.rs  google.rs  huaweicloud.rs  lib.rs  openstack.rs  oracle.rs  tencent.rs  volcengine.rs
services/aliyun-oss/: Cargo.toml  README.md
services/aliyun-oss/examples/: oss_operations.rs
services/aliyun-oss/src/: constants.rs  credential.rs  lib.rs  sign_request.rs
services/aliyun-oss/src/provide_credential/: assume_role.rs  assume_role_with_oidc.rs  config_file.rs  credentials_file.rs  credentials_uri.rs  default.rs  ecs_ram_role.rs  env.rs  mod.rs  oss_profile.rs  static.rs
services/aliyun-oss/testdata/: .gitignore
services/aliyun-oss/tests/: credential_chain.rs  main.rs
services/aws-v4/: Cargo.toml  README.md
services/aws-v4/benches/: aws.rs
services/aws-v4/examples/: dynamodb_sign.rs  s3_express_sign.rs  s3_sign.rs
services/aws-v4/src/: constants.rs  credential.rs  lib.rs  sign_request.rs
services/aws-v4/src/provide_credential/: assume_role.rs  assume_role_with_web_identity.rs  cognito.rs  default.rs  ecs.rs  eks_pod_identity.rs  env.rs  imds.rs  mod.rs  process.rs  profile.rs  s3_express_session.rs  sso.rs  static.rs  utils.rs
services/aws-v4/testdata/: default_config  default_credential
services/aws-v4/tests/: README.md
services/aws-v4/tests/credential_providers/: assume_role.rs  assume_role_with_web_identity.rs  cognito.rs  ecs.rs  eks_pod_identity.rs  env.rs  imds.rs  mod.rs  process.rs  profile.rs  s3_express.rs  sso.rs
services/aws-v4/tests/mocks/: README.md  cognito_mock_server.py  credential_process_helper.py  ecs_mock_server.py  eks_pod_identity_mock_server.py  imds_mock_server.py  sso_mock_server.py
services/aws-v4/tests/signing/: mod.rs  presigned.rs  special_chars.rs  standard.rs
services/azure-storage/: Cargo.toml  README.md
services/azure-storage/examples/: blob_storage.rs
services/azure-storage/src/: account_sas.rs  constants.rs  credential.rs  lib.rs  service_sas.rs  sign_request.rs  user_delegation.rs
services/azure-storage/src/provide_credential/: azure_cli.rs  azure_pipelines.rs  client_certificate.rs  client_secret.rs  default.rs  env.rs  imds.rs  mod.rs  static_provider.rs  workload_identity.rs
services/azure-storage/tests/: README.md
services/azure-storage/tests/credential_providers/: azure_cli.rs  azure_pipelines.rs  client_certificate.rs  client_secret.rs  default.rs  env.rs  imds.rs  mod.rs  static_provider.rs  workload_identity.rs
services/google/: Cargo.toml
services/google/examples/: chain_logging.rs  custom_chain.rs
services/google/src/: constants.rs  credential.rs  lib.rs  sign_request.rs
services/google/src/provide_credential/: authorized_user.rs  default.rs  external_account.rs  file.rs  impersonated_service_account.rs  mod.rs  parse.rs  static_provider.rs  token.rs  vm_metadata.rs
services/google/testdata/: test_credential.json  test_external_account.json  test_impersonated_service_account.json  testbucket_credential.json
services/google/tests/: README.md  main.rs
services/google/tests/credential_providers/: authorized_user.rs  default.rs  external_account.rs  file.rs  impersonated_service_account.rs  mod.rs  static_provider.rs  token.rs  vm_metadata.rs
services/google/tests/mocks/: sts_mock_server.py  vm_metadata_mock_server.py
services/google/tests/signing/: mod.rs  signed_url.rs  standard.rs
services/huaweicloud-obs/: Cargo.toml
services/huaweicloud-obs/examples/: chain_logging.rs  custom_chain.rs
services/huaweicloud-obs/src/: constants.rs  credential.rs  lib.rs  sign_request.rs
services/huaweicloud-obs/tests/: credential_chain.rs
services/openstack-keystone/: Cargo.toml
services/openstack-keystone/src/: credential.rs  lib.rs  sign_request.rs
services/openstack-keystone/tests/: credential_providers.rs
services/oracle/: Cargo.toml
services/oracle/examples/: oracle_chain_logging.rs
services/oracle/src/: config.rs  constants.rs  credential.rs  lib.rs  sign_request.rs
services/oracle/tests/: credential_chain.rs
services/tencent-cos/: Cargo.toml
services/tencent-cos/examples/: tencent_chain_logging.rs
services/tencent-cos/src/: constants.rs  credential.rs  lib.rs  sign_request.rs
services/tencent-cos/src/provide_credential/: assume_role_with_web_identity.rs  config.rs  default.rs  env.rs  mod.rs  static.rs
services/tencent-cos/testdata/: .gitignore
services/tencent-cos/tests/: credential_chain.rs  main.rs
services/volcengine-tos/: Cargo.toml
services/volcengine-tos/src/: constants.rs  credential.rs  lib.rs  sign_request.rs  uri.rs
services/volcengine-tos/tests/: presigned.rs
src/: lib.rs
src/openstack/: config.rs  credential.rs  mod.rs  signer.rs
(+24 files in other folders)
