# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = ["core", "context/*", "services/*", "reqsign"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/apache/opendal-reqsign"
rust-version = "1.85.0"

[workspace.dependencies]
# Workspace dependencies
reqsign-aliyun-oss = { version = "2.0.2", path = "services/aliyun-oss" }
reqsign-aws-v4 = { version = "2.0.2", path = "services/aws-v4" }
reqsign-azure-storage = { version = "2.0.2", path = "services/azure-storage" }
reqsign-command-execute-tokio = { version = "2.0.2", path = "context/command-execute-tokio" }
reqsign-core = { version = "2.0.2", path = "core" }
reqsign-file-read-tokio = { version = "2.0.2", path = "context/file-read-tokio" }
reqsign-google = { version = "2.0.2", path = "services/google" }
reqsign-http-send-reqwest = { version = "3.0.0", path = "context/http-send-reqwest" }
reqsign-huaweicloud-obs = { version = "2.0.2", path = "services/huaweicloud-obs" }
reqsign-oracle = { version = "2.0.2", path = "services/oracle" }
reqsign-tencent-cos = { version = "2.0.2", path = "services/tencent-cos" }
reqsign-volcengine-tos = { version = "2.0.2", path = "services/volcengine-tos" }

# Crates.io dependencies
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
criterion = { version = "0.8.1", features = ["async_tokio", "html_reports"] }
dotenvy = "0.15"
env_logger = "0.11"
form_urlencoded = "1"
hex = "0.4"
hmac = "0.12"
http = "1"
jiff = "0.2"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
log = "0.4"
percent-encoding = "2"
pretty_assertions = "1.3"
quick-xml = { version = "0.38.1", features = ["serialize"] }
rand = { version = "0.10.0" }
reqwest = { version = "0.13.1", default-features = false }
rsa = { version = "0.9.2", features = ["pkcs5", "sha2"] }
rust-ini = { version = "0.21" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
tempfile = "3.8"
tokio = { version = "1", default-features = false }
