# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "reqsign-http-send-reqwest"
version = "2.0.0"

categories = ["asynchronous"]
description = "Reqwest-based HTTP client implementation for reqsign."
keywords = ["command", "http", "reqsign", "async"]

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { version = "0.1.3" }
reqsign-core = { workspace = true }
reqwest = { workspace = true, default-features = false }

[dev-dependencies]
reqwest = { workspace = true, default-features = false, features = ["default-tls"] }
wasm-bindgen-test = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
